2005-03-03  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>
	
	* src/*.c: Use gtk/gtk.h instead of gnome.h where possible.
	* src/mainwindow.c: Added map dragging and scroll wheel zooming.  Made sure all callbacks start with mainwindow_
	* src/map.c: Allow draw flags to allow caller to specify which map elements get drawn.
	* src/map_draw_*: Respect draw flags.

2005-03-03  Nathan Fredrickson  <nathan@silverorange.com>
	* configure.ac: Enable directives to disable deprecated features.
	* src/main.c: Call gnome_program_init() instead of deprecated gnome_program_init().
	* src/mainwindow.c: Call gdk_draw_drawable() instead of deprecated gdk_draw_pixmap().

2005-03-03  Nathan Fredrickson  <nathan@silverorange.com>
	* src/gui.c: Call gtk_main_quit() to shutdown properly and look for glade file in source dir first.
	* src/main.c: Clean up.
	* src/layers.c: Look for style file in source dir first.
	* src/gpsclient.c
	* src/map.c: Add prototype.

2005-03-03  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/map.c: Removed drawing code, added two rendering backends.
	* src/map_draw_cairo.c:
	* src/map_draw_gdk.c: Added.
	* src/glyph.c: Made libsvg optional.
	* src/gotowindow.c: Removed lots of unused code.
	* src/main.c: Initialize threading (currently disabled).
	* src/search_road.c: Don't pass RoadID to search results window.

2005-03-03  Nathan Fredrickson  <nathan@silverorange.com>
	
	* data/layers.xml:
	* src/layers.c: Parse dash style and fix the railroads.
	* src/mainwindow.c: Redraw map after reloading styles.
	* data/roadster.glade: Set accelerator for style reload to F5.

2005-03-03  Nathan Fredrickson  <nathan@silverorange.com>
	
	* src/*.h: Change extern "C" to G_BEGIN_DECLS/G_END_DECLS
	* src/layers.h:
	* src/layers.c: Add layers_reload() to reload the layer styles.
	* data/roadster.glade
	* src/mainwindow.c: Add "Debug" menu and "Reload Styles" menuitem.

2005-03-03  Nathan Fredrickson  <nathan@silverorange.com>
	
	* data/Makefile.am: