@@ -669,7 +669,7 @@
 		  <property name="spacing">0</property>
 
 		  <child>
-		    <widget class="GtkNotebook" id="sideboxnotebook">
+		    <widget class="GtkNotebook" id="sidebarnotebook">
 		      <property name="border_width">1</property>
 		      <property name="visible">True</property>
 		      <property name="show_tabs">True</property>
@@ -856,7 +856,6 @@
 			  <property name="yalign">0.5</property>
 			  <property name="xpad">4</property>
 			  <property name="ypad">0</property>
-			  <property name="mnemonic_widget">sideboxnotebook</property>
 			</widget>
 			<packing>
 			  <property name="type">tab</property>
@@ -1250,7 +1249,6 @@
 			  <property name="yalign">0.5</property>
 			  <property name="xpad">0</property>
 			  <property name="ypad">0</property>
-			  <property name="mnemonic_widget">sideboxnotebook</property>
 			</widget>
 			<packing>
 			  <property name="type">tab</property>
@@ -1419,46 +1417,6 @@
 			  <property name="xalign">0.5</property>
 			  <property name="yalign">0.5</property>
 			  <property name="xpad">4</property>
-			  <property name="ypad">0</property>
-			  <property name="mnemonic_widget">sideboxnotebook</property>
-			</widget>
-			<packing>
-			  <property name="type">tab</property>
-			</packing>
-		      </child>
-
-		      <child>
-			<widget class="GtkLabel" id="label92262">
-			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">Coming Soon?</property>
-			  <property name="use_underline">False</property>
-			  <property name="use_markup">False</property>
-			  <property name="justify">GTK_JUSTIFY_LEFT</property>
-			  <property name="wrap">False</property>
-			  <property name="selectable">False</property>
-			  <property name="xalign">0.5</property>
-			  <property name="yalign">0.5</property>
-			  <property name="xpad">0</property>
-			  <property name="ypad">0</property>
-			</widget>
-			<packing>
-			  <property name="tab_expand">False</property>
-			  <property name="tab_fill">True</property>
-			</packing>
-		      </child>
-
-		      <child>
-			<widget class="GtkLabel" id="label92261">
-			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">&lt;span size=&quot;small&quot;&gt;_4. Draw&lt;/span&gt;</property>
-			  <property name="use_underline">True</property>
-			  <property name="use_markup">True</property>
-			  <property name="justify">GTK_JUSTIFY_LEFT</property>
-			  <property name="wrap">False</property>
-			  <property name="selectable">False</property>
-			  <property name="xalign">0.5</property>
-			  <property name="yalign">0.5</property>
-			  <property name="xpad">0</property>
 			  <property name="ypad">0</property>
 			</widget>
 			<packing>
